# frcobot_ros2

./: .gitignore  .gitmodules  README.md  TODO.md
depth_camera_description/: CMakeLists.txt  package.xml
depth_camera_description/urdf/: depth_camera.urdf
depth_camera_sync/: CMakeLists.txt  README.md  package.xml
depth_camera_sync/src/: depth_sync_node.cpp  test_depth_sync_node.cpp
docs/: README.md
fairino10_v6_moveit2_config/: package.xml
fairino10_v6_moveit2_config/config/: fairino10_v6_robot.srdf  fairino10_v6_robot.urdf.xacro  fairino10_v6_robot_fake.ros2_control.xacro  fairino10_v6_robot_gazebo.ros2_control.xacro  fairino10_v6_robot_real.ros2_control.xacro  gripper_fake.ros2_control.xacro  gripper_gazebo.ros2_control.xacro  gripper_real.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.txt  sensors_3d.yaml
fairino16_v6_moveit2_config/: package.xml
fairino20_v6_moveit2_config/: package.xml
fairino30_v6_moveit2_config/: package.xml
fairino3_v6_moveit2_config/: package.xml
fairino3mt_v6_moveit2_config/: package.xml
fairino5_v6_moveit2_config/: package.xml
fairino_description/: CMakeLists.txt  model.config
fairino_description/urdf/: fairino10_v6.urdf  gripper.urdf
fairino_hardware/: CMakeLists.txt  package.xml
fairino_hardware/include/fairino_hardware/: command_server.hpp  data_type_def.h  version_control.h
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_hardware/src/: command_server.cpp
fairino_mtc_demo/: CMakeLists copy.txt  CMakeLists.txt  README.md  package.xml
fairino_mtc_demo/config/: sensors_3d.yaml
fairino_mtc_demo/launch/: moveit_gazebo.launch.py  moveit_rviz.launch.py  moveit_sim.launch.py  mtc_builder.launch.py  mtc_builder_test.launch.py  mtc_demo_app.launch.py  mtc_executor_json.launch.py  test_moveit_sim.launch.py  test_mtc_demo_env.launch.py
fairino_mtc_demo/memory/: REAME.md  current_solver_config.yaml
fairino_mtc_demo/src/: README.md  add_collision_objects.cpp  mtc_node.cpp  task_builder.cpp  task_builder.hpp  task_executor.cpp  task_generator.cpp
fairino_mtc_demo/tasks/fr10/: Griff.ngc  csv_demo.csv  model2.stp  task_grip_real.json  task_grip_sim.json  task_move_real.json  task_move_sim.json  test copy.json  test_square.json
fairino_mtc_demo/tasks/fr3/: task_move_sim.json
gripper_description/: CMakeLists.txt  package.xml
gripper_description/urdf/: gripper.urdf
gripper_hardware/: CMakeLists.txt  README.md  package.xml
gripper_hardware/config/: gripper_params.yaml
gripper_hardware/launch/: gripper.launch.py
gripper_hardware/src/: gripper_node.py
moveit_bt_constructor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
moveit_bt_constructor/include/moveit_bt_constructor/: pick_place_task.h
moveit_bt_constructor/launch/: demo.launch.py  run.launch.py
moveit_bt_constructor/src/: ik_clearance_cost.cpp  pick_place_demo.cpp  pick_place_task.cpp
moveit_bt_constructor/test/: pick_place_test.cpp
robotic_arms_control/: CMakeLists.txt  package.xml
robotic_arms_control/config/: fr10_controllers.yaml
robotic_arms_control/launch/: controller_spawner.launch.py  gazebo_bringup.launch.py  rviz_bringup.launch.py
robotic_arms_control/urdf/: bazu.urdf  panda_arm.urdf
