<?xml version="1.0"?>
<package format="3">
  <name>depth_camera_description</name>
  <version>0.0.1</version>
  <description>A ROS 2 package containing a URDF description of a depth camera.</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
