<?xml version="1.0"?>
<package format="3">
  <name>depth_camera_sync</name>
  <version>0.1.0</version>
  <description>A ROS 2 package to subscribe to and optionally synchronize depth image and camera info topics, republishing them with a /sync/ prefix.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>