<?xml version="1.0"?>
<package format="3">
  <name>gripper_hardware</name>
  <version>0.0.1</version>
  <description>ROS2 Humble package for controlling a real gripper (mapulator-based example)</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>control_msgs</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
